--- a/doc/requests/reference/request_options.adoc
+++ b/doc/requests/reference/request_options.adoc
@@ -13,7 +13,7 @@ struct request_options
   bool enforce_tls{true};
   /// The allowed redirect mode.
   redirect_mode redirect{private_domain};
-  /// The maximum of allowed redirectse
+  /// The maximum of allowed redirects.
   std::size_t max_redirects{12};
 };
 
