--- a/doc/requests/reference.adoc
+++ b/doc/requests/reference.adoc
@@ -2,7 +2,6 @@
 
 `completion_handler_for` and `default_token` are used instead of verbose asio macros.
 
-include::reference/body_traits.adoc[]
 include::reference/connection.adoc[]
 include::reference/connection_pool.adoc[]
 include::reference/cookie.adoc[]
@@ -21,4 +20,5 @@ include::reference/request_settings.adoc[]
 include::reference/response.adoc[]
 include::reference/service.adoc[]
 include::reference/session.adoc[]
+include::reference/source.adoc[]
 include::reference/stream.adoc[]
