--- a/doc/requests/reference/session.adoc
+++ b/doc/requests/reference/session.adoc
@@ -7,8 +7,7 @@
 namespace boost::requests
 {
 
-template<typename Executor = asio::any_io_executor>
-struct basic_session
+struct session
 {
     /// The type of the executor associated with the object.
     typedef Executor executor_type;
@@ -18,19 +17,19 @@ struct basic_session
     struct rebind_executor
     {
         /// The timer type when rebound to the specified executor.
-        typedef basic_session<Executor1> other;
+        typedef session<Executor1> other;
     };
 
     /// Constructor.
-    explicit basic_session(const executor_type &ex);
+    explicit session(const executor_type &ex);
 
     /// Construct a session from a context.
     template<typename ExecutionContext>
-    explicit basic_session(ExecutionContext &context);
+    explicit session(ExecutionContext &context);
 
     /// Rebinding construcotr.
     template<typename Executor2>
-    explicit basic_session(basic_session<Executor2> && sess);
+    explicit session(session<Executor2> && sess);
 
     /// Get the executor associated with the object.
     executor_type get_executor() BOOST_ASIO_NOEXCEPT;
@@ -39,8 +38,8 @@ struct basic_session
     const struct request_options & options() const {return options_;}
 
     // A variant of pools, depending on the url
-    using pool_ptr = variant2::variant<std::shared_ptr<basic_http_connection_pool<Executor>>,
-                                       std::shared_ptr<basic_https_connection_pool<Executor>>>;
+    using pool_ptr = variant2::variant<std::shared_ptr<http_connection_pool<Executor>>,
+                                       std::shared_ptr<https_connection_pool<Executor>>>;
 
     // Get a pool for a given url.
     pool_ptr get_pool(urls::url_view url, error_code & ec);
@@ -51,7 +50,7 @@ struct basic_session
                         CompletionToken && token = asio::default_token_t<executor_type>());
 
     void shutdown();
-    using stream = basic_stream<Executor>;
+    using stream = stream<Executor>;
 
     /// Build a request internally and initiate it.
     template<typename RequestBody>
@@ -86,14 +85,12 @@ struct basic_session
 
     template<typename RequestBody,
              asio::token_for<void (boost::system::error_code,
-                                   basic_stream<Executor>)> CompletionToken
+                                   stream<Executor>)> CompletionToken
                   = asio::default_token_t<executor_type>>
     auto async_ropen(urls::url_view url,
                      http::request<RequestBody> & req,
                      CompletionToken && token = asio::default_token_t<executor_type>());
 };
-
-typedef basic_session<> session;
 
 }
 ----
