--- a/doc/requests/reference/stream.adoc
+++ b/doc/requests/reference/stream.adoc
@@ -7,8 +7,7 @@
 namespace boost::requests
 {
 
-template<typename Executor = asio::any_io_executor>
-struct basic_stream
+struct stream
 {
   /// The type of the executor associated with the object.
   typedef Executor executor_type;
@@ -57,12 +56,12 @@ struct basic_stream
           CompletionToken = asio::default_completion_token_t<executor_type>>
   auto async_dump(CompletionToken && token asio::default_completion_token_t<executor_type>());
 
-  basic_stream(basic_stream && lhs) = default;
-  basic_stream& operator=(basic_stream && lhs) = default;
+  stream(stream && lhs) = default;
+  stream& operator=(stream && lhs) = default;
 
-  basic_stream           (const basic_stream &) = delete;
-  basic_stream& operator=(const basic_stream &) = delete;
-  ~basic_stream();
+  stream           (const stream &) = delete;
+  stream& operator=(const stream &) = delete;
+  ~stream();
 
   using history_type = response_base::history_type;
   bool done() const;
@@ -78,7 +77,7 @@ struct basic_stream
   void prepend_history(history_type && pre_history);
 };
 
-using stream = basic_stream<>;
+using stream = stream<>;
 }
 ----
 
