--- a/doc/requests/reference/cookie.adoc
+++ b/doc/requests/reference/cookie.adoc
@@ -8,7 +8,7 @@ namespace boost::requests
 
 struct cookie
 {
-  using allocator_type = boost::container::pmr::polymorphic_allocator<char>;
+  using allocator_type = std::allocator<char>;
   using string_type = std::basic_string<char, std::char_traits<char>, allocator_type>;
 
   cookie(allocator_type && alloc) : name(alloc), value(alloc), domain(alloc), path(alloc) {}
