--- a/doc/requests/reference/http.adoc
+++ b/doc/requests/reference/http.adoc
@@ -9,7 +9,7 @@ namespace boost::requests::http
 using boost::beast::http::field;
 using boost::beast::http::status;
 using boost::beast::http::verb;
-using fields = boost::beast::http::basic_fields<boost::container::pmr::polymorphic_allocator<char>>;
+using fields = boost::beast::http::basic_fields<>;
 
 using file_body   = beast::http::file_body;
 using empty_body   = beast::http::empty_body;
@@ -21,12 +21,8 @@ using response_header = beast::http::response_header<fields>;
 
 template<typename Body> using request  = beast::http::request <Body, fields>;
 template<typename Body> using response = beast::http::response<Body, fields>;
-
-template<typename Body> using request_parser  = beast::http::request_parser <Body, boost::container::pmr::polymorphic_allocator<char>>;
-template<typename Body> using response_parser = beast::http::response_parser<Body, boost::container::pmr::polymorphic_allocator<char>>;
-
 }
 ----
 
-The http header contains aliases for beast::http members with pmr allocators.
+The http header contains aliases for beast::http members.
 
