--- a/doc/requests/reference/request_parameters.adoc
+++ b/doc/requests/reference/request_parameters.adoc
@@ -23,16 +23,12 @@ field_entry basic_auth(core::string_view username,
 field_entry bearer(core::string_view token);
 
 // helper to create headers from an initializer list.
-auto headers(std::initializer_list<field_entry> fields,
-            boost::container::pmr::memory_resource * res = boost::container::pmr::get_default_resource());
+auto headers(std::initializer_list<field_entry> fields);
 
 // The full request settings used in the connection.
 struct request_parameters
 {
-  using allocator_type = boost::container::pmr::polymorphic_allocator<char>;
-  allocator_type get_allocator() const {return fields.get_allocator();}
-
-  using fields_type = beast::http::basic_fields<allocator_type>;
+  using fields_type = beast::http::fields;
   fields_type fields;
   request_options opts{};
   cookie_jar * jar = nullptr;
