--- a/doc/requests/reference.adoc
+++ b/doc/requests/reference.adoc
@@ -17,6 +17,7 @@ include::reference/public_suffix.adoc[]
 include::reference/redirect.adoc[]
 include::reference/request_options.adoc[]
 include::reference/request_parameters.adoc[]
+include::reference/request.adoc[]
 include::reference/response.adoc[]
 include::reference/service.adoc[]
 include::reference/session.adoc[]
