--- a/doc/requests/reference/connection.adoc
+++ b/doc/requests/reference/connection.adoc
@@ -93,48 +93,30 @@ struct connection
     /// The stream type returned by ropen.
     using stream = stream<executor_type>;
 
-    /// Build a request internally and initiate it.
-    template<typename RequestBody>
-    auto ropen(beast::http::verb method,
-               urls::url_view path,
-               RequestBody && body,
-               request_settings req,
-               system::error_code & ec) -> stream;
-
-    template<typename RequestBody>
-    auto ropen(beast::http::verb method,
-               urls::url_view path,
-               RequestBody && body,
-               request_settings req) -> stream;
-
-    template<typename RequestBody,
-              typename CompletionToken
-                   = asio::default_token_t<executor_type>>
-    auto async_ropen(beast::http::verb method,
-                     urls::url_view path,
-                     RequestBody && body,
-                     request_settings req,
-                     CompletionToken && token = asio::default_token_t<executor_type>());
-
     /// Send a preexisting request.
     template<typename RequestBody>
-    auto ropen(http::request<RequestBody> & req,
-               request_options opt,
+    auto ropen(beast::http::verb method,
+               urls::pct_string_view path,
+               http::fields & headers,
+               source & src,
                cookie_jar * jar,
                system::error_code & ec) -> stream;
 
     template<typename RequestBody>
     auto ropen(beast::http::verb method,
-               urls::url_view path,
-               http::request<RequestBody> & req,
+               urls::pct_string_view path,
+               http::fields & headers,
+               source & src,
                request_options opt,
                cookie_jar * jar) -> stream;
 
     template<typename RequestBody,
              typename CompletionToken
                   = asio::default_token_t<executor_type>>
-    auto async_ropen(http::request<RequestBody> & req,
-                     request_options opt,
+    auto async_ropen(beast::http::verb method,
+                     urls::pct_string_view path,
+                     http::fields & headers,
+                     source & src,
                      cookie_jar * jar = nullptr,
                      CompletionToken && token = asio::default_token_t<executor_type>());
 };
