--- a/doc/requests/reference/http.adoc
+++ b/doc/requests/reference/http.adoc
@@ -8,19 +8,41 @@ namespace boost::requests::http
 
 using boost::beast::http::field;
 using boost::beast::http::status;
+using boost::beast::http::status_class;
+using boost::beast::http::to_status_class;
+using boost::beast::http::to_string;
 using boost::beast::http::verb;
-using fields = boost::beast::http::basic_fields<>;
+using boost::beast::http::fields;
 
-using file_body   = beast::http::file_body;
-using empty_body   = beast::http::empty_body;
-using string_body = beast::http::string_body;
-using buffer_body = beast::http::buffer_body;
 
-using request_header  = beast::http::request_header <fields>;
-using response_header = beast::http::response_header<fields>;
+struct header
+{
+  http::field field = http::field::unknown;
+  core::string_view key;
+  core::string_view value;
+  std::string buffer;
 
-template<typename Body> using request  = beast::http::request <Body, fields>;
-template<typename Body> using response = beast::http::response<Body, fields>;
+  header() = default;
+  header(http::field field, core::string_view value) : field(field), value(value) {}
+  header(core::string_view key, core::string_view value) : key(key), value(value) {}
+};
+
+// This class enables initializer_lists for requests.
+struct headers : fields
+{
+  headers(std::initializer_list<header> fields)
+  {
+    for (const auto & init : fields)
+      if (init.field != http::field::unknown)
+        set(init.field, init.value);
+      else
+        set(init.key, init.value);
+  }
+  headers(fields && fl) : fields(std::move(fl)) {}
+  using fields::fields;
+  using fields::operator=;
+};
+
 }
 ----
 
